Add permanent GPU vs CPU benchmark script and update README with migration results